name:                gl-scene-perlin-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/gl-scene-perlin-generator#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scene.PerlinGenerator
  other-modules:       Scene.PerlinGenerator.Algo
                       Scene.PerlinGenerator.GeneratorContext
                       Scene.PerlinGenerator.GeneratorQuery
  build-depends:       base >= 4.7 && < 5
                     , gl-scene
                     , gl-scene-math
                     , bytestring
                     , flow
                     , JuicyPixels
                     , lens
                     , linear
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable perlin-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , gl-scene-perlin-generator
                     , flow
                     , http-types
                     , scotty
                     , text
                     , wai-extra
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

test-suite perlin-generator-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , gl-scene-perlin-generator
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/gl-scene-perlin-generator
